# numeric-methods-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.org
01-finding-roots/: bisection.cpp  bisection.h  tests.cpp
src/roots-1d/: bisection.cpp  examples.cpp  iterative.cpp  muller.cpp  newton-raphson.cpp  roots.h  solution.cpp  solution.h  tests.cpp
tests/: roots1d
